<resources>
    <string name="app_name">Food Gospel</string>
    <string name="title_activity_nav_home">NavHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--NavMenu-->
    <string name="nav_farmer">Farmer</string>
    <string name="nav_dairy">Dairy Farm</string>
    <string name="nav_poultry">Poultry Farm</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>

    <!--Login-->
    <string name="placeholder_username">UserEmail</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_delete_farmer"> Are you sure you want to delete ? </string>
</resources>
