<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_farmer"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/nav_farmer" />
        <item
            android:id="@+id/nav_dairy"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_dairy" />
        <item
            android:id="@+id/nav_poultry"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_poultry"/>
        <!--<item-->
            <!--android:id="@+id/nav_about"-->
            <!--android:icon="@drawable/ic_info_black_24dp"-->
            <!--android:title="@string/nav_about" />-->

        <!--<item-->
            <!--android:id="@+id/nav_logout"-->
            <!--android:icon="@drawable/logout_menu"-->
            <!--android:title="@string/nav_logout" />-->
    </group>
    <group android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
    </group>

    <group android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_menu"
            android:title="@string/nav_logout" />
    </group>

    <!--<item android:title="">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_about"-->
                <!--android:icon="@drawable/ic_info_black_24dp"-->
                <!--android:title="@string/nav_about" />-->
        <!--</menu>-->
    <!--</item>-->
    <!--<item android:title="">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_logout"-->
                <!--android:icon="@drawable/logout_menu"-->
                <!--android:title="@string/nav_logout" />-->
        <!--</menu>-->
    <!--</item>-->
</menu>
